Home page service showcase section update

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- service showcase -->
         <section class="service_showcase_area section">
             <div class="service_container" id="fashion">
-                <div class="service_work_info">
+                <div class="service_info">
                     <h3 class="service_title">
                         FASHION
                     </h3>
@@ -119,7 +119,7 @@
                         as we transport you into a
                         world where every image tells a captivating story
                     </p>
-                    <a href="#" class="btn">View more <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                             fill="none" viewBox="0 0 20 20">
                             <path fill="#0F172A" fill-rule="evenodd"
                                 d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
@@ -130,23 +130,24 @@
                     <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
                 </div>
             </div>
-
-            <div class="service_container" id="wedding">
+            <div class="service_container" id="wdding">
                 <div class="service_image">
-                    <img src="./assests/images/img11.jpeg" alt="Wedding Photography Through Rana's Lens">
+                    <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
                 </div>
-                <div class="service_work_info">
+                <div class="service_info">
                     <h3 class="service_title">
-                        WEDDINGS
+                        FASHION
                     </h3>
                     <p class="service_desc">
-                        Celebrate the love, joy, and cherished moments of your special day with our exquisite
-                        wedding photography. We understand the significance of your wedding day and strive to
-                        capture every precious detail and emotion with artistry and elegance. We believe that
-                        wedding photography is more than just taking beautiful pictures; it's about capturing the
-                        essence of your love story and the unique essence of your relationship.
+                        Step into a world of elegance and style with our captivating fashion photography. Through
+                        meticulous attention to
+                        detail, creative direction, and a keen eye for aesthetics, our fashion photographers bring
+                        garments and designs to life,
+                        showcasing their craftsmanship and beauty. Experience the magic of fashion through our lens
+                        as we transport you into a
+                        world where every image tells a captivating story
                     </p>
-                    <a href="#" class="btn">View more <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                             fill="none" viewBox="0 0 20 20">
                             <path fill="#0F172A" fill-rule="evenodd"
                                 d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
@@ -154,50 +155,24 @@
                         </svg></a>
                 </div>
             </div>
-
-
-            <div class="service_container" id="concert">
-                <div class="service_work_info">
+            <div class="service_container" id="wdding">
+                <div class="service_image">
+                    <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
+                </div>
+                <div class="service_info">
                     <h3 class="service_title">
-                        CONCERT
+                        FASHION
                     </h3>
                     <p class="service_desc">
-                        Experience the energy and magic of live performances with our vibrant concert photography.
-                        We specialize in capturing the electrifying atmosphere, dynamic performances, and raw
-                        emotions of music concerts. Through our concert photography, we aim to transport you back to
-                        the heart-pounding beats, the electric atmosphere, and the immersive world of live music.
+                        Step into a world of elegance and style with our captivating fashion photography. Through
+                        meticulous attention to
+                        detail, creative direction, and a keen eye for aesthetics, our fashion photographers bring
+                        garments and designs to life,
+                        showcasing their craftsmanship and beauty. Experience the magic of fashion through our lens
+                        as we transport you into a
+                        world where every image tells a captivating story
                     </p>
-                    <a href="#" class="btn">View more <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                            fill="none" viewBox="0 0 20 20">
-                            <path fill="#0F172A" fill-rule="evenodd"
-                                d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
-                                clip-rule="evenodd" />
-                        </svg></a>
-                </div>
-                <div class="service_image">
-                    <img src="./assests/images/img1.jpeg" alt="Concert Photography Through Rana's Lens">
-                </div>
-            </div>
-
-
-
-            <div class="service_container" id="portrait">
-                <div class="service_image">
-                    <img src="./assests/images/img15.jpeg" alt="Portrait Photography Through Rana's Lens">
-                </div>
-                <div class="service_work_info">
-                    <h3 class="service_title">
-                        PORTRAIT
-                    </h3>
-                    <p class="service_desc">
-                        Discover the art of capturing personalities and stories through our compelling portrait
-                        photography. Whether it's a professional headshot, a family portrait, or a personal branding
-                        session, we believe that every individual has a story worth telling. Through our portrait
-                        photography, we aim to capture the authenticity, character, and inner beauty of each
-                        subject, creating images that resonate with both the person in front of the lens and those
-                        who view the photographs.
-                    </p>
-                    <a href="#" class="btn">View more <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                             fill="none" viewBox="0 0 20 20">
                             <path fill="#0F172A" fill-rule="evenodd"
                                 d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
@@ -205,36 +180,31 @@
                         </svg></a>
                 </div>
             </div>
-
-
-
-
-            <div class="service_container" id="travel">
-                <div class="service_work_info">
+            <div class="service_container" id="wdding">
+                <div class="service_image">
+                    <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
+                </div>
+                <div class="service_info">
                     <h3 class="service_title">
-                        TRAVEL
+                        FASHION
                     </h3>
                     <p class="service_desc">
-                        Embark on a visual odyssey through my lens as I capture the enchanting beauty of global
-                        destinations. Through our travel photography, we aim to transport you to distant lands,
-                        allowing you to vicariously experience the thrill of exploration and the rich tapestry of
-                        global cultures. From serene natural vistas to bustling markets and ancient landmarks, our
-                        images reflect the soul of each destination and evoke a sense of wanderlust.
+                        Step into a world of elegance and style with our captivating fashion photography. Through
+                        meticulous attention to
+                        detail, creative direction, and a keen eye for aesthetics, our fashion photographers bring
+                        garments and designs to life,
+                        showcasing their craftsmanship and beauty. Experience the magic of fashion through our lens
+                        as we transport you into a
+                        world where every image tells a captivating story
                     </p>
-                    <a href="#" class="btn">View more <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                             fill="none" viewBox="0 0 20 20">
                             <path fill="#0F172A" fill-rule="evenodd"
                                 d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
                                 clip-rule="evenodd" />
                         </svg></a>
                 </div>
-                <div class="service_image">
-                    <img src="./assests/images/img2.jpeg" alt="Travel Photography Through Rana's Lens">
-                </div>
             </div>
-
-
-
         </section>
 
         <!-- CTA Section -->
@@ -275,7 +245,7 @@
 
         
         <section class="glimpse_of_work section">
-                <h1 class="glimpse_title">GLIMPSE OF MY WORK</h1>
+                <h1 class="glimpse_title">GLIMPS OF OUR WORK</h1>
                 <div class="works_image_area">
                     <div class="glimpse_img">
                         <img src="./assests/images/img11.jpeg" alt="wedding photography through Rana's Len's">
