--- a/error.html
+++ b/error.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Through Rana's Lens - Page not found</title>
-    <!-- CUSTOM CSS FILE -->
-    <link rel="stylesheet" href="./styles/404.css">
-
-    <!-- GOOGLE FONTS -->
+    <meta name="description" content="the page that you are looking for is no longer available.">
+    <title>404 Page not found</title>
+    <meta name="theme-color" content="#00BD9D"/>
+    <link rel="stylesheet" href="./styles/error.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet" </head>
 </head>
-
 <body>
-
     <div class="main_body">
-        <!-- ------------------- HERO AREA START -------------------------- -->
         <header class="hero_container">
-            <!-- NAVIGATION AREA START -->
             <div class="navigation_area">
                 <nav class="nav_container">
-                    <label class="hamberger">
-                        <input class="bar" type="checkbox">
+                    <label class="hamberger" for="bar">
+                        <input class="bar" name="bar" id="bar" type="checkbox">
                     </label>
                     <div class="logo_container">
-                        <a href="">
-                            <img src="./assests/logo.svg" alt="Through Rana's Lens Logo" class="logo">
+                        <a href="index.html" aria-label="Go to home page">
+                            <img src="./assests/logo.svg" height="100px" width="200px" alt="Through Rana's Lens Logo" class="logo">
                         </a>
                     </div>
                     <div class="social_container">
-                        <a href="" class="social_icon">
+                        <a href="" class="social_icon" aria-label="Visit our twitter page">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-twitter" viewBox="0 0 16 16">
                                 <path
                                     d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                             </svg>
                         </a>
-                        <a href="" class="social_icon">
+                        <a href="" class="social_icon" aria-label="Visit our facebook page">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path
                                     d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                             </svg>
                         </a>
-                        <a href="" class="social_icon">
+                        <a href="" class="social_icon" aria-label="Visit our instagram page">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 xmlns:v="https://vecta.io/nano">
                                 <path
@@ -58,26 +52,26 @@
                 </nav>
                 <div class="nav_link_container">
                     <ul class="nav_links">
-                        <li class="links"><a href="#">Home</a></li>
-                        <li class="links"><a href="#">Portfolio</a></li>
-                        <li class="links"><a href="#">About</a></li>
-                        <li class="links"><a href="#">Contact</a></li>
+                        <li class="links"><a href="index.html">Home</a></li>
+                        <li class="links"><a href="portfolio.html">Portfolio</a></li>
+                        <li class="links"><a href="about.html">About</a></li>
+                        <li class="links"><a href="contact.html">Contact</a></li>
                         <div class="social_container_2" id="social_container_2">
-                            <a href="" class="social_icon">
+                            <a href="" class="social_icon" aria-label="visit our twitter page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-twitter" viewBox="0 0 16 16">
                                     <path
                                         d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                                 </svg>
                             </a>
-                            <a href="" class="social_icon">
+                            <a href="" class="social_icon" aria-label="visit our facebook page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-facebook" viewBox="0 0 16 16">
                                     <path
                                         d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                                 </svg>
                             </a>
-                            <a href="" class="social_icon">
+                            <a href="" class="social_icon" aria-label="visit our instagram page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     xmlns:v="https://vecta.io/nano">
                                     <path
@@ -89,9 +83,6 @@
                 </div>
                 <div class="overlay"></div>
             </div>
-            <!-- NAVIGATION AREA END -->
-
-            <!-- PAGE CONTENT START -->
             <div class="error_text_container">
                 <div class="text_area">
                     <h1 class="subtitle">
@@ -106,55 +97,46 @@
                 </div>
                 <a href="index.html" class="btn">Go Home</a>
             </div>
-            <!-- PAGE CONTENT END -->
         </header>
-        <!-- ------------------- HERO AREA START -------------------------- -->
     </div>
-
-    <!-- --------------------- FOOTER AREA START ------------------------- -->
     <footer class="footer_area">
         <div class="copyright_text">
             <p>&copy; Through Rana’s Lens | 2023</p>
         </div>
         <div class="site_map">
             <ul class="short_links">
-                <li class="links"><a href="#">Home</a></li>
+                <li class="links"><a href="index.html">Home</a></li>
                 <li class="links dots">•</li>
-                <li class="links"><a href="#">Portfolio</a></li>
+                <li class="links"><a href="portfolio.html">Portfolio</a></li>
                 <li class="links dots">•</li>
-                <li class="links"><a href="#">About</a></li>
+                <li class="links"><a href="about.html">About</a></li>
                 <li class="links dots">•</li>
-                <li class="links"><a href="#">Contact Us</a></li>
+                <li class="links"><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
         <div class="social_container">
-            <a href="" class="social_icon">
+            <a href="" class="social_icon" aria-label="visit our twitter page">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter"
                     viewBox="0 0 16 16">
                     <path
                         d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                 </svg>
             </a>
-            <a href="" class="social_icon">
+            <a href="" class="social_icon" aria-label="visit our facebook page">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-facebook" viewBox="0 0 16 16">
                     <path
                         d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                 </svg>
             </a>
-            <a href="" class="social_icon">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+            <a href="" class="social_icon" aria-label="visit our instagram page">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"class="bi bi-instagram" viewBox="0 0 16 16">
                     <path
-                        d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
+                        d="M8 0L4.703.048C3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7L0 8.001l.048 3.297c.04.852.174 1.433.372 1.942a3.93 3.93 0 0 0 .923 1.417c.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372L8 16l3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923 3.93 3.93 0 0 0 .923-1.417c.197-.509.332-1.09.372-1.942L16 8l-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372L7.998 0h.003zm-.717 1.442h.718l3.232.046c.78.035 1.204.166 1.486.275a2.48 2.48 0 0 1 .92.599 2.47 2.47 0 0 1 .598.92c.11.281.24.705.275 1.485l.047 3.231-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919 2.47 2.47 0 0 1-.92.598c-.28.11-.704.24-1.485.276l-3.232.047c-2.136 0-2.39-.009-3.233-.047-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485l-.046-3.233.046-3.231c.036-.78.166-1.204.276-1.486a2.48 2.48 0 0 1 .599-.92 2.47 2.47 0 0 1 .92-.598c.282-.11.705-.24 1.485-.276l2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
                 </svg>
             </a>
         </div>
     </footer>
-    <!-- --------------------- FOOTER AREA START ------------------------- -->
-
 </body>
-
-<!-- JS FILES  -->
-<script src="./js/nav.js"></script>
-
+<script src="./js/nav.js" defer></script>
 </html>
