updated styles file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </label>
                 <div class="logo_container">
                     <a href="">
-                        <img src="./assests/logo.svg" alt="Through Rana's Lens Logo" class="logo">
+                        <img src="./assests/logo.png" alt="Through Rana's Lens Logo" class="logo">
                     </a>
                 </div>
                 <div class="social_container">
