navigation layout update

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <div class="logo_container">
               <a href="index.html" aria-label="Go to Home Page">
                 <img
-                  src="./assests/logo.svg"
+                  src="./assests/logo.png"
                   alt="Through Rana's Lens Logo"
                   class="logo"
                 />
@@ -169,7 +169,7 @@
         <section class="section about_us_area">
           <div class="about_founder_container">
             <div class="about_founder" id="founder">
-              <p class="subtitle"><b>Founder</b></p>
+              <!-- <p class="subtitle"><b>Founder</b></p> -->
               <h3>RANA MEDHI</h3>
               <p class="desc">
                 I have founded Through Rana's Lens back in 2017 when I was in
@@ -190,44 +190,22 @@
               />
             </div>
           </div>
-          <div class="about_team_container">
-            <div class="about_team" id="team">
-              <h3>OUR TEAM</h3>
-              <p class="desc">
-                I have founded Through Rana's Lens back in 2017 when I was in
-                school in order to a provide premium photography service to
-                artists, models and couples throughout the biggest milestone in
-                their life. The high quality imagery is paired with a warm and
-                friendly environment that is guaranteed to the best out of each
-                person in front of the camera. Together Through Rana's Lens crew
-                offer a top of the range all-rounded service for every clients
-                who walks through the door
-              </p>
-            </div>
-            <div class="img_team" id="team_img">
-              <img
-                class="img"
-                src="./assests/images/founder_img.webp"
-                alt="Team of Through Rana's Lens"
-              />
-            </div>
-          </div>
         </section>
         <section class="section work_counter">
           <div class="work work_1" id="fashion">
-            <h1 class="number">30+</h1>
+            <h1 class="number">3 Years</h1>
             <p class="work_info"><i>Fashion photography</i></p>
           </div>
           <div class="work work_2" id="fashion">
-            <h1 class="number">20+</h1>
+            <h1 class="number">2 Years</h1>
             <p class="work_info"><i>Wedding photography</i></p>
           </div>
           <div class="work work_3" id="fashion">
-            <h1 class="number">80+</h1>
+            <h1 class="number">8 Years</h1>
             <p class="work_info"><i>Travelling photography</i></p>
           </div>
           <div class="work work_4" id="fashion">
-            <h1 class="number">70+</h1>
+            <h1 class="number">7 Years</h1>
             <p class="work_info"><i>Portrait photography</i></p>
           </div>
         </section>
@@ -301,7 +279,7 @@
               class="btn"
               aria-label="Button for contact us page"
             >
-              <p>Book Us Know</p>
+              <p>Book Now</p>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
