Navigation and Hero section update

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <div class="main_body">
     <header class="hero_container">
+        <img src="./assests/images/Hero_image.webp" class="hero_image" alt="">
         <!-- Navigation Area -->
         <div class="navigation_area">
             <nav class="nav_container">
@@ -62,122 +63,17 @@
         </div>
         <!-- Navigation Area End -->
         <div class="hero_text_container">
-            <h3 class="subtitle">
-                Elevating Moments
-            </h3>
-            <h1 class="title">
-                Through Rana’s Lens
-            </h1>
-            <p class="description">
-                We specialize in photography, video production, fashion, weddings, concerts, portraits & Travel.
-            </p>
+            <h1 class="hero_title_text">Capture <br>Your Moments <br> Through Rana's Lens</h1>
+            <p class="hero_body_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae incidunt tenetur quaerat culpa! Doloremque, porro sequi vel quidem aut ipsam placeat qui sit. Sunt, quisquam! Et aspernatur iste quae adipisci?</p>
+
         </div>
     </header>
 
     <!-- MAIN BODY AREA -->
     <main class="main">
         <!-- service showcase -->
-        <section class="service_showcase_area section">
-            <div class="service_container" id="fashion">
-                <div class="service_info">
-                    <h3 class="service_title">
-                        FASHION
-                    </h3>
-                    <p class="service_desc">
-                        Step into a world of elegance and style with our captivating fashion photography. Through
-                        meticulous attention to
-                        detail, creative direction, and a keen eye for aesthetics, our fashion photographers bring
-                        garments and designs to life,
-                        showcasing their craftsmanship and beauty. Experience the magic of fashion through our lens
-                        as we transport you into a
-                        world where every image tells a captivating story
-                    </p>
-                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                            fill="none" viewBox="0 0 20 20">
-                            <path fill="#0F172A" fill-rule="evenodd"
-                                d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
-                                clip-rule="evenodd" />
-                        </svg></a>
-                </div>
-                <div class="service_image">
-                    <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
-                </div>
-            </div>
-            <div class="service_container" id="wdding">
-                <div class="service_image">
-                    <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
-                </div>
-                <div class="service_info">
-                    <h3 class="service_title">
-                        FASHION
-                    </h3>
-                    <p class="service_desc">
-                        Step into a world of elegance and style with our captivating fashion photography. Through
-                        meticulous attention to
-                        detail, creative direction, and a keen eye for aesthetics, our fashion photographers bring
-                        garments and designs to life,
-                        showcasing their craftsmanship and beauty. Experience the magic of fashion through our lens
-                        as we transport you into a
-                        world where every image tells a captivating story
-                    </p>
-                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                            fill="none" viewBox="0 0 20 20">
-                            <path fill="#0F172A" fill-rule="evenodd"
-                                d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
-                                clip-rule="evenodd" />
-                        </svg></a>
-                </div>
-            </div>
-            <div class="service_container" id="wdding">
-                <div class="service_image">
-                    <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
-                </div>
-                <div class="service_info">
-                    <h3 class="service_title">
-                        FASHION
-                    </h3>
-                    <p class="service_desc">
-                        Step into a world of elegance and style with our captivating fashion photography. Through
-                        meticulous attention to
-                        detail, creative direction, and a keen eye for aesthetics, our fashion photographers bring
-                        garments and designs to life,
-                        showcasing their craftsmanship and beauty. Experience the magic of fashion through our lens
-                        as we transport you into a
-                        world where every image tells a captivating story
-                    </p>
-                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                            fill="none" viewBox="0 0 20 20">
-                            <path fill="#0F172A" fill-rule="evenodd"
-                                d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
-                                clip-rule="evenodd" />
-                        </svg></a>
-                </div>
-            </div>
-            <div class="service_container" id="wdding">
-                <div class="service_image">
-                    <img src="./assests/images/img8.jpeg" alt="Fashion Photography Through Rana's Lens">
-                </div>
-                <div class="service_info">
-                    <h3 class="service_title">
-                        FASHION
-                    </h3>
-                    <p class="service_desc">
-                        Step into a world of elegance and style with our captivating fashion photography. Through
-                        meticulous attention to
-                        detail, creative direction, and a keen eye for aesthetics, our fashion photographers bring
-                        garments and designs to life,
-                        showcasing their craftsmanship and beauty. Experience the magic of fashion through our lens
-                        as we transport you into a
-                        world where every image tells a captivating story
-                    </p>
-                    <a href="#" class="btn"><p class="view_more_btn">View more </p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                            fill="none" viewBox="0 0 20 20">
-                            <path fill="#0F172A" fill-rule="evenodd"
-                                d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z"
-                                clip-rule="evenodd" />
-                        </svg></a>
-                </div>
-            </div>
+        <section class="about_section section" id="section--1">
+            
         </section>
 
         <!-- CTA Section -->
@@ -356,5 +252,4 @@
 <!-- NAVIGATION JS FILE -->
 <script src="./js/nav.js" defer></script>
 <script src="./js/slider.js" defer></script>
-
 </html>
