portfolio section update

--- a/index.html
+++ b/index.html
@@ -88,13 +88,35 @@
                     I founded Through Rana's Lens back in 2017 when he was in school in order to a provide premium photography service to artists, models and couples throughout the biggest milestone in their life.<br> The high quality imagery is paired with a warm and friendly environment that is guaranteed to the best out of each person in front of the camera.Together Through Rana's Lens crew offer a top of the range all-rounded service for every clients who walks through the door.
                 </p>
                 <a href="#" class="about_cta_btn btn">
-                    <p>Know More</p> 
-                    <i class="ri-arrow-right-s-line about_cta_btn_arrow btn_arrow"></i>
+                    Know More
                 </a>
             </div>
         </section>
 
-        <section class="services_section" id="section--2">
+        <section class="counter_section section" id="section--2">
+            <div class="counter">
+                <h1 class="count_text">10+</h1>
+                <div class="line"></div>
+                <p class="count_sub_text">Years of experience</p>
+            </div>
+            <div class="counter">
+                <h1 class="count_text">10K+</h1>
+                <div class="line"></div>
+                <p class="count_sub_text">Project Completed</p>
+            </div>
+            <div class="counter">
+                <h1 class="count_text">80K+</h1>
+                <div class="line"></div>
+                <p class="count_sub_text">World Wide Clients</p>
+            </div>
+            <div class="counter">
+                <h1 class="count_text">600+</h1>
+                <div class="line"></div>
+                <p class="count_sub_text">Positive Review</p>
+            </div>
+        </section>
+
+        <section class="services_section" id="section--3">
             <div class="service_section_info">
                 <p class="service_section_sub_title">
                     Our Services
@@ -215,37 +237,83 @@
             </div>
         </section>
 
-        <section class="glimpse_of_work section">
-                <h1 class="glimpse_title">GLIMPS OF OUR WORK</h1>
-                <div class="wrapper">
-                    <div class="carousel">
-                        <div class="img_container">
-                            <img src="./assests/images/img1.jpeg" alt="" draggable="false">
-                        </div>
-                        <div class="img_container">
-                            <img src="./assests/images/img2.jpeg" alt="" draggable="false">
-                        </div>
-                        <div class="img_container">
-                            <img src="./assests/images/img1.jpeg" alt="" draggable="false">
-                        </div>
-                        <div class="img_container">
-                            <img src="./assests/images/img1.jpeg" alt="" draggable="false">
-                        </div>
-                        <div class="img_container">
-                            <img src="./assests/images/img1.jpeg" alt="">
-                        </div>
+        <section class="portfolio_section section" id="section--4">
+            <div class="portfolio_text_container">
+                <p class="portfolio_section_sub_title">
+                Portfolio
+                </p>
+                <div class="portfolio_info_area">
+                    <div class="portfolio_info_area_left">
+                    <h1 class="portfolio_section_title">
+                        Some great moments <br> we captured
+                    </h1>
                     </div>
-                    <div class="control_button">
-                        <div class="control prev_btn" id="left">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path fill="#0F172A" d="M18 10C18 10.4142 17.6642 10.75 17.25 10.75L4.6599 10.75L6.76034 12.7004C7.06387 12.9823 7.08145 13.4568 6.79959 13.7603C6.51774 14.0639 6.04319 14.0815 5.73966 13.7996L2.23966 10.5496C2.08684 10.4077 2 10.2086 2 10C2 9.79145 2.08684 9.59232 2.23966 9.45041L5.73966 6.20041C6.0432 5.91856 6.51774 5.93613 6.79959 6.23966C7.08145 6.5432 7.06387 7.01775 6.76034 7.2996L4.6599 9.25L17.25 9.25C17.6642 9.25 18 9.58579 18 10Z" clip-rule="evenodd"/></svg>
-                        </div>
-                        <div class="control next_btn" id="right">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path fill="#0F172A" d="M2 10C2 9.58579 2.33579 9.25 2.75 9.25L15.3401 9.25L13.2397 7.2996C12.9361 7.01775 12.9186 6.5432 13.2004 6.23966C13.4823 5.93613 13.9568 5.91856 14.2603 6.20041L17.7603 9.45041C17.9132 9.59232 18 9.79145 18 10C18 10.2086 17.9132 10.4077 17.7603 10.5496L14.2603 13.7996C13.9568 14.0815 13.4823 14.0639 13.2004 13.7603C12.9186 13.4568 12.9361 12.9823 13.2397 12.7004L15.3401 10.75L2.75 10.75C2.33579 10.75 2 10.4142 2 10Z" clip-rule="evenodd"/></svg>
-                        </div>
+                    <div class="portfolio_info_area_right">
+                        <p class="portfolio_section_desc">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorem saepe aspernatur reprehenderit, blanditiis error.
+                        </p>
+                        <a href="#" class="portfolio_section_btn btn">
+                            view more
+                        </a>
                     </div>
                 </div>
-         </section>
-    
+            </div>
+            <div class="portfolio_img_area">
+                <div class="portfolio_img_card grid_col_span_2">
+                    <img class="portfolio_img" src="./assests/images/wedding1.webp" alt="">
+                </div>
+
+                <div class="portfolio_img_card grid_col_span_2">
+                    <img class="portfolio_img" src="./assests/images/concert1.webp" alt="">
+                    <div class="portfolio_img_text_area">
+                        <div class="line"></div>
+                        <p class="portfolio_img_sub_title">
+                            Concert photography   
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio_img_card ">
+                    <img class="portfolio_img" src="./assests/images/concert1.webp" alt="">
+                    <div class="portfolio_img_text_area">
+                        <div class="line"></div>
+                        <p class="portfolio_img_sub_title">
+                            Concert photography   
+                        </p>
+                    </div>
+                </div>
+
+                <div class="portfolio_img_card">
+                    <img class="portfolio_img" src="./assests/images/fashion1.webp" alt="">
+                    <div class="portfolio_img_text_area">
+                        <div class="line"></div>
+                        <p class="portfolio_img_sub_title">
+                            Fashion photography    
+                        </p>
+                    </div>
+                </div>
+
+                <div class="portfolio_img_card grid_col_span_2">
+                    <img class="portfolio_img" src="./assests/images/product1.webp" alt="">
+                    <div class="portfolio_img_text_area">
+                        <div class="line"></div>
+                        <p class="portfolio_img_sub_title">
+                            Product photography    
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="portfolio_img_card grid_col_span_2">
+                    <img class="portfolio_img" src="./assests/images/product1.webp" alt="">
+                    <div class="portfolio_img_text_area">
+                        <div class="line"></div>
+                        <p class="portfolio_img_sub_title">
+                            Portrait photography
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section contact_us">
             <div class="contact_us_area">
                 <h3>
@@ -275,7 +343,6 @@
                     </svg>
                 </a>
             </div>
-
         </section>
     </main>
 </div>
@@ -330,6 +397,4 @@
 </body>
 <!-- NAVIGATION JS FILE -->
 <script src="./js/nav.js" defer></script>
-<script src="./js/slider.js" defer></script>
-<!-- <script src="./js/header.js"></script>  -->
 </html>
