Added Id to portfolio section images

--- a/index.html
+++ b/index.html
@@ -260,26 +260,26 @@
             </div>
             <div class="portfolio_img_area">
                 <div class="portfolio_img_card grid_col_span_2">
-                    <img class="portfolio_img" src="./assests/images/wedding1.webp" alt="">
+                    <img class="portfolio_img" id="wedding" src="./assests/images/wedding1.webp" alt="">
                 </div>
 
                 <div class="portfolio_img_card grid_col_span_2">
-                    <img class="portfolio_img" src="./assests/images/concert1.webp" alt="">
+                    <img class="portfolio_img" src="./assests/images/concert1.webp" id="concert" alt="">
                 </div>
                 <div class="portfolio_img_card ">
-                    <img class="portfolio_img" src="./assests/images/concert1.webp" alt="">
+                    <img class="portfolio_img" src="./assests/images/portrait1.webp" id="portrait" alt="">
                 </div>
 
                 <div class="portfolio_img_card">
-                    <img class="portfolio_img" src="./assests/images/fashion1.webp" alt="">
+                    <img class="portfolio_img" id="fashion" src="./assests/images/fashion1.webp" alt="">
                 </div>
 
                 <div class="portfolio_img_card grid_col_span_2">
-                    <img class="portfolio_img" src="./assests/images/product1.webp" alt="">
+                    <img class="portfolio_img" id="travel" src="./assests/images/product1.webp" alt="">
                 </div>
                 
                 <div class="portfolio_img_card grid_col_span_2">
-                    <img class="portfolio_img" src="./assests/images/product1.webp" alt="">
+                    <img class="portfolio_img" id="product" src="./assests/images/product1.webp" alt="">
                 </div>
             </div>
         </section>
